infra/k8s/apps/overlays/local/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: api.products.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: products-service
            port:
              number: 5000

  - host: api.cart.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cart-service
            port:
              number: 8080

  - host: api.users.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 9090

  - host: api.search.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: search-service
            port:
              number: 4000

  - host: app.ecommerce.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: store-ui-service
            port:
              number: 80
